[package]
name = "rustmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustmd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] # Comment this

[[bin]]
name = "mybin"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-streams = "0.2.2"
futures = "0.3.21"
js-sys = "0.3.56"
nom = "7.1.1"

[dependencies.web-sys]
version = "0.3.56"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "ReadableStream",
  "console",
  "Response",
]
